syntax = "proto3";

package session;
option go_package = "pkg/pb";
option swift_prefix = "";

import "google/protobuf/timestamp.proto";

// SessionManager for opening/closing sessions
service SessionManager {
  rpc SessionStatus(SessionStatusRequest) returns (SessionStatusResponse);
  rpc OpenSession(OpenSessionRequest) returns (OpenSessionResponse);
  rpc CloseSession(CloseSessionRequest) returns (CloseSessionResponse);
}

message OpenSessionRequest {
  string session_id = 1;
  uint32 pid = 2;
  uint32 ppid = 3;
  string local_socket = 4;
}

message OpenSessionResponse {
  bool success = 1;
  string session_id = 2;
}

message SessionStatusRequest {
  string session_id = 1;
}

message SessionStatusResponse {
  bool success = 1;
  string error = 2;
  google.protobuf.Timestamp expiry = 3;
}

message CloseSessionRequest {
  string session_id = 1;
  uint32 pid = 2;
}

message CloseSessionResponse {
  bool success = 1;
}
