syntax = "proto3";

package sys_auth;
option go_package = "pkg/pb";
option swift_prefix = "";

import "google/protobuf/empty.proto";
import "agent.proto";
import "agent_auth.proto";

service SystemAuthToken {
  rpc TokenAuth(TokenAuthRequest) returns (TokenAuthResponse);
  rpc OAuthParams(google.protobuf.Empty) returns (OAuthParamsResponse);
}

service SystemAuthInteractive {
  rpc InteractiveAuth(InteractiveAuthRequest) returns (InteractiveChallenge);
}

service SystemAuthAuthorize {
  rpc Authorize(SystemAuthorizeRequest) returns (SystemAuthorizeResponse);
}

message TokenAuthRequest {
  string username = 1;
  string token = 2;
}

message TokenAuthResponse {
  bool successful = 1;
  agent.Token token = 2;
  string session_id = 3;
}

message OAuthParamsResponse {
  string url = 10;
  string client_id = 11;
  string app_slug = 12;
}

message InteractiveAuthInitRequest {
  string username = 1;
  string password = 2;
}

message InteractiveAuthContinueRequest {
  string txid = 1;
  string value = 2;
}

message InteractiveAuthRequest {
  oneof interactive_auth {
    InteractiveAuthInitRequest init = 1;
    InteractiveAuthContinueRequest continue = 2;
  }
}

enum InteractiveAuthResult {
  PAM_SUCCESS = 0;
  PAM_PERM_DENIED = 6;
  PAM_AUTH_ERR = 7;
}

message InteractiveChallenge {

  enum PromptMeta {
    UNSPECIFIED = 0;
    PAM_PROMPT_ECHO_OFF = 1;
    PAM_PROMPT_ECHO_ON = 2;
    PAM_ERROR_MSG = 3;
    PAM_TEXT_INFO = 4;
    PAM_RADIO_TYPE = 5;
    PAM_BINARY_PROMPT = 7;
    PASSWORD = 100;
  }

  string txid = 1;
  bool finished = 2;
  InteractiveAuthResult result = 3;
  string prompt = 4;
  PromptMeta prompt_meta = 5;
  string debug_info = 6;
  string session_id = 7;
}

message SystemAuthorizeRequest {
  string session_id = 1;
  agent_auth.AuthorizeRequest authz = 2;
}

message SystemAuthorizeResponse {
  agent_auth.AuthorizeResponse response = 1;
  InteractiveAuthResult code = 2;
}
